# libical

./: CMakeLists.txt
src/: CMakeLists.txt
src/fuzz/: CMakeLists.txt  libical_fuzz.cc
